<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

<!--*******************************************Icon Giot*****************************************-->
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorBlack"
            android:src="@drawable/icon-giot"/>
<!--********************************************Icon Giot****************************************-->

<!--********************************************Layout User****************************************-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/user"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintTxtLogin"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
<!--********************************************Layout User****************************************-->

<!--********************************************Layout Password****************************************-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/password"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/hintTxtPassword"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
<!--********************************************Layout Password****************************************-->

<!--********************************************Button Login****************************************-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="50dp"
            android:text="@string/btnTxtLogin" />
<!--********************************************Button Login****************************************-->

<!--********************************************Text Register****************************************-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/lblRegister">
            </TextView>

            <TextView
                android:id="@+id/txtGoToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/lblGoToRegister"/>
        </LinearLayout>
<!--********************************************Text Register****************************************-->


<!--*******************************************Icon Giot*****************************************-->
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorGiot"
            android:src="@drawable/logo-giot"/>
<!--********************************************Icon Giot****************************************-->


    </LinearLayout>
</ScrollView>
